// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Authorize 3DS2 should call fail order and redirect if result has error 1`] = `
Array [
  Array [
    "Checkout-Begin",
    "stage",
    "payment",
    "paymentError",
    "mocked_error.payment.not.valid",
  ],
]
`;

exports[`Authorize 3DS2 should complete authorization for SFRA6 1`] = `
Array [
  Array [
    "orderConfirmForm",
    Object {
      "orderID": "mocked_orderNo",
      "orderToken": "mocked_orderToken",
    },
  ],
]
`;

exports[`Authorize 3DS2 should complete authorization for SFRA5 1`] = `
Array [
  Array [
    "Order-Confirm",
    "ID",
    "mocked_orderNo",
    "token",
    "mocked_orderToken",
  ],
]
`;

exports[`Authorize 3DS2 should do payments call with resultcode ChallengeShopper 1`] = `
Array [
  Array [
    Object {
      "details": Object {
        "mockeddetails": "mockedvalue",
      },
      "paymentData": "mocked_adyen_payment_data",
    },
  ],
]
`;

exports[`Authorize 3DS2 should do payments call with resultcode IdentifyShopper 1`] = `
Array [
  Array [
    Object {
      "details": Object {
        "mockeddetails": "mockedvalue",
      },
      "paymentData": "mocked_adyen_payment_data",
    },
  ],
]
`;

exports[`Authorize 3DS2 should error when placing order 1`] = `
Array [
  Array [
    "Checkout-Begin",
    "stage",
    "placeOrder",
    "paymentError",
    "mocked_error.payment.not.valid",
  ],
]
`;

exports[`Authorize 3DS2 should go to error page when authorisation fails 1`] = `
Array [
  Array [
    "Error-ErrorCode",
    "err",
    "general",
  ],
]
`;

exports[`Authorize 3DS2 should go to error page when authorisation fails 2`] = `
Array [
  Array [
    "Unable to authorise 3DS2. Message: Cannot read property 'resultCode' of undefined",
  ],
]
`;

exports[`Authorize 3DS2 should redirect if form resultCode is invalid 1`] = `
Array [
  Array [
    "Checkout-Begin",
    "stage",
    "payment",
    "paymentError",
    "mocked_error.payment.not.valid",
  ],
]
`;

exports[`Authorize 3DS2 should redirect if form resultCode is invalid 2`] = `
Array [
  Array [
    "paymentDetails 3DS2 not available",
  ],
]
`;

exports[`Authorize 3DS2 should redirect when result contains action 1`] = `
Array [
  Array [
    "Adyen-Adyen3DS2",
    "orderNo",
    "mocked_orderNo",
  ],
]
`;
